...
  const hasPhoto =
    enrichmentPhotos.length > 0 &&
    (enrichmentPhotos[0].url.startsWith("https://") ||
      enrichmentPhotos[0].url.startsWith("http://"));

  return (
    <View testID="place-detail-content">
      {/* Hero photo */}
      {hasPhoto && (
        <PlacePhotoHero
          photos={enrichmentPhotos}
          placeName={place.name}
          onViewPhotos={() => setGalleryOpen(true)}
...
