...
    "closesOnAt": "Closes {day} at {time}",
    "opensAt": "Opens at {time}",
    "opensTomorrowAt": "Opens tomorrow at {time}",
    "opensOnAt": "Opens {day} at {time}"
  },
  "place": {
    "overview": "Overview",
    "reviews": "Reviews",
    "ratedReviews": "rated reviews",
    "info": "Info",
    "directions": "Directions",
    "savePlace": "Save",
    "wheelchairAccessible": "Wheelchair accessible",
...
